--- a/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
@@ -1,7 +1,7 @@
 {{#Plural}}
   <span>What's the word for this picture?</span><br/>
   <span style="font-family:Arial; font-size:20px;">[Plural]</span><br/>
-  <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
+  <span style="font-family:Arial; font-size:20px;">{{Picture}} {{Picture}}</span></br>
 
   {{#Masculine}}
     <br><div style="background-color:blue;">
