--- a/Card Types/Plural/Pronunciation/Front_How-do-you-you-say.html
+++ b/Card Types/Plural/Pronunciation/Front_How-do-you-you-say.html
@@ -20,5 +20,5 @@
     </div><br/>
   {{/Neuter}}
 
-  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+  <br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
 {{/Plural}}
